@@ -1,0 +1,13 @@
+<?php
+
+class A {
+    const C = ['foo'];
+
+    public static function test() {
+        return ['foo'];
+    }
+}
+
+function test() {
+    return ['foo'];
+}
