@@ -1,0 +1,5 @@
+<?php
+
+var_dump(A::C);
+var_dump(A::test());
+var_dump(test());
